--- a/public_html/css/bootstrap.css
+++ b/public_html/css/bootstrap.css
@@ -1390,6 +1390,7 @@ pre code {
   margin-left: auto;
   padding-left: 15px;
   padding-right: 15px;
+  margin-top: 100px;
 }
 @media (min-width: 768px) {
   .container {
@@ -6451,4 +6452,71 @@ label {
 }
 .pager .disabled > a {
   border-color: #dddddd;
+}
+
+#left-side-widget {
+    width: 20%;
+    float: left;
+}
+
+#right-side-widget {
+    width: 20%;
+    float: right;
+}
+
+#front-content{
+    margin-top: 10%;
+    float: left;
+    width: 60%;
+}
+
+#logo{
+    margin: 0 auto;
+    width: 100px;
+    height: 100px;
+}
+
+#search{
+    width: 80%;
+    margin-top: 30px;
+    margin: 0 auto;
+}
+
+#search-box input{
+    width: 85%;
+    float: left;
+}
+
+#search-box button{
+    margin-left: 3px;
+}
+
+#short-description{
+    margin-top: 30px;
+    text-align: center;
+}
+
+.clear{
+    clear: both;
+}
+
+footer{
+    background: none repeat scroll 0 0 #f2f2f2;
+    border-top: 1px solid #e4e4e4;
+    line-height: 40px;
+    min-width: 980px;
+    bottom: 0;
+    left: 0;
+    position: absolute;
+    right: 0;
+}
+
+footer #credentials{
+    width: 50%;
+    float: left;
+}
+
+footer #navigation-links{
+    width: 50%;
+    float: left;
 }
