--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -123,3 +123,10 @@ footer #navigation-links{
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0) inset, 0 0 8px rgba(255, 158, 47, 0.5);
 }
 
+#mashup-tweets-list {
+    list-style: none;
+    float: left;
+    float: right;
+    margin: 0 auto;
+}
+
