--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -2,6 +2,11 @@
     width: 90%;
 }
 
+h3, .h3 {
+    font-size: 14px;
+    padding-left: 5px;
+}
+
 #left-side-widget {
     width: 20%;
     height: 90%;
@@ -125,8 +130,7 @@ footer #navigation-links{
 
 #mashup-tweets-list {
     list-style: none;
-    float: left;
-    float: right;
-    margin: 0 auto;
+    margin: 0;
+    padding: 0;
 }
 
