passing parametres trough get, function calls for search by GET query

--- a/public_html/css/search-results.css
+++ b/public_html/css/search-results.css
@@ -42,6 +42,11 @@ footer{
     overflow: hidden;
     position: relative;
     margin-bottom: 25px;
+    border-color: #eee #ddd #bbb;
+    border-image: none;
+    border-style: solid;
+    border-width: 1px;
+    box-shadow: 1px 1px 5px #999;
 }
 
 
@@ -58,10 +63,11 @@ footer{
     width: 100%;
     opacity: 0.8;
     transition: all 200ms ease-out 0s;
+
 }
 
 .youtube .thumb:hover{
-    transform: scale(1,2);
+    transform: scale(1.1,1.1);
 }
 
 .youtube .play{
@@ -161,3 +167,8 @@ footer{
 .image-info-active-mashup { height: 140px; width: 200px; background: rgba(255,255,255,.85); }
 .image-info-active-tab {height: 160px; width: 240px; background: rgba(255,255,255,.85); }
 p.top {background: #fff; padding: 5px; margin: 0; word-wrap: break-word; word-break: break-all; }
+
+#mashup-map{
+    width: 100%;
+    height: 300px;
+}
