--- a/public_html/css/search-results.css
+++ b/public_html/css/search-results.css
@@ -26,6 +26,10 @@ h2{
     padding-top: 30px;
 }
 
+#mashup {
+    padding-top: 30px;
+}
+
 .more-down {
     padding-top: 40px;
 }
@@ -171,4 +175,19 @@ p.top {background: #fff; padding: 5px; margin: 0; word-wrap: break-word; word-br
 #mashup-map{
     width: 100%;
     height: 300px;
+}
+
+.twitterLoginBtn{
+    margin: 0 auto;
+    padding-top: 5px;
+    padding-right: 20px;
+    opacity: 0.7;
+}
+
+.twitterLoginBtn:hover{
+    opacity: 1.0;
+}
+
+.twitterLoginBtn:active{
+    padding-top: 6px;
 }
