--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -27,8 +27,8 @@ h3, .h3 {
 }
 
 #front-content{
-    margin-top: 10%;
-    float: left;
+    margin: 0 auto;
+    padding-top: 10%;
     width: 60%;
 }
 
@@ -133,4 +133,3 @@ footer #navigation-links{
     margin: 0;
     padding: 0;
 }
-
