--- a/public_html/css/search-results.css
+++ b/public_html/css/search-results.css
@@ -172,7 +172,7 @@ footer{
 .image-info-active-tab {height: 160px; width: 240px; background: rgba(255,255,255,.85); }
 p.top {background: #fff; padding: 5px; margin: 0; word-wrap: break-word; word-break: break-all; }
 
-#mashup-map{
+#mashup-map, #videos-map, #images-map, #stories-map {
     width: 100%;
     height: 300px;
 }
