--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -128,7 +128,7 @@ footer #navigation-links{
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0) inset, 0 0 8px rgba(255, 158, 47, 0.5);
 }
 
-#mashup-tweets-list {
+#mashup-tweets-list, #mashup-twitter-stories-list, #mashup-google-stories-list {
     list-style: none;
     margin: 0;
     padding: 0;
